--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ env:
     - DB_CONNECTION=mysql
     - DB_HOST=127.0.0.1
     - DB_PORT=3306
-    - DB_DATABASE=laravel_test
+    - DB_DATABASE=laravel_tst
     - DB_USERNAME=root
     - DB_PASSWORD=
 
